include/lely/io/sock.h

enum {
	IO_SOCK_BTH = 1,
	IO_SOCK_IPV4,
	IO_SOCK_IPV6,
	IO_SOCK_UNIX
};
enum {
	IO_SOCK_STREAM = 1,
	IO_SOCK_DGRAM
};
enum {
	IO_MSG_PEEK = 1 << 0,
	IO_MSG_OOB = 1 << 1,
	IO_MSG_WAITALL = 1 << 2
};
enum {
	IO_SHUT_RD,
	IO_SHUT_WR,
	IO_SHUT_RDWR
};
LELY_IO_EXTERN io_handle_t io_open_socket(int domain, int type);
LELY_IO_EXTERN int io_open_socketpair(int domain, int type,
		io_handle_t handle_vector[2]);
LELY_IO_EXTERN ssize_t io_recv(io_handle_t handle, void *buf, size_t nbytes,
		io_addr_t *addr, int flags);
LELY_IO_EXTERN ssize_t io_send(io_handle_t handle, const void *buf,
		size_t nbytes, const io_addr_t *addr, int flags);
LELY_IO_EXTERN io_handle_t io_accept(io_handle_t handle, io_addr_t *addr);
LELY_IO_EXTERN int io_connect(io_handle_t handle, const io_addr_t *addr);
LELY_IO_EXTERN int io_sock_get_domain(io_handle_t handle);
LELY_IO_EXTERN int io_sock_get_type(io_handle_t handle);
LELY_IO_EXTERN int io_sock_bind(io_handle_t handle, const io_addr_t *addr);
LELY_IO_EXTERN int io_sock_listen(io_handle_t handle, int backlog);
LELY_IO_EXTERN int io_sock_shutdown(io_handle_t handle, int how);
LELY_IO_EXTERN int io_sock_get_sockname(io_handle_t handle, io_addr_t *addr);
LELY_IO_EXTERN int io_sock_get_peername(io_handle_t handle, io_addr_t *addr);
LELY_IO_EXTERN int io_sock_get_maxconn(void);
LELY_IO_EXTERN int io_sock_get_acceptconn(io_handle_t handle);
LELY_IO_EXTERN int io_sock_get_broadcast(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_broadcast(io_handle_t handle, int broadcast);
LELY_IO_EXTERN int io_sock_get_debug(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_debug(io_handle_t handle, int debug);
LELY_IO_EXTERN int io_sock_get_dontroute(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_dontroute(io_handle_t handle, int dontroute);
LELY_IO_EXTERN int io_sock_get_error(io_handle_t handle, int *perror);
LELY_IO_EXTERN int io_sock_get_keepalive(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_keepalive(io_handle_t handle, int keepalive,
		int time, int interval);
LELY_IO_EXTERN int io_sock_get_linger(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_linger(io_handle_t handle, int time);
LELY_IO_EXTERN int io_sock_get_oobinline(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_oobinline(io_handle_t handle, int oobinline);
LELY_IO_EXTERN int io_sock_get_rcvbuf(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_rcvbuf(io_handle_t handle, int size);
LELY_IO_EXTERN int io_sock_set_rcvtimeo(io_handle_t handle, int timeout);
LELY_IO_EXTERN int io_sock_get_reuseaddr(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_reuseaddr(io_handle_t handle, int reuseaddr);
LELY_IO_EXTERN int io_sock_get_sndbuf(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_sndbuf(io_handle_t handle, int size);
LELY_IO_EXTERN int io_sock_set_sndtimeo(io_handle_t handle, int timeout);
LELY_IO_EXTERN int io_sock_get_tcp_nodelay(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_tcp_nodelay(io_handle_t handle, int nodelay);
LELY_IO_EXTERN ssize_t io_sock_get_nread(io_handle_t handle);
LELY_IO_EXTERN int io_sock_get_mcast_loop(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_mcast_loop(io_handle_t handle, int loop);
LELY_IO_EXTERN int io_sock_get_mcast_ttl(io_handle_t handle);
LELY_IO_EXTERN int io_sock_set_mcast_ttl(io_handle_t handle, int ttl);
LELY_IO_EXTERN int io_sock_mcast_join_group(io_handle_t handle,
		unsigned int index, const io_addr_t *group);
LELY_IO_EXTERN int io_sock_mcast_block_source(io_handle_t handle,
		unsigned int index, const io_addr_t *group,
		const io_addr_t *source);
LELY_IO_EXTERN int io_sock_mcast_unblock_source(io_handle_t handle,
		unsigned int index, const io_addr_t *group,
		const io_addr_t *source);
LELY_IO_EXTERN int io_sock_mcast_leave_group(io_handle_t handle,
		unsigned int index, const io_addr_t *group);
LELY_IO_EXTERN int io_sock_mcast_join_source_group(io_handle_t handle,
		unsigned int index, const io_addr_t *group,
		const io_addr_t *source);
LELY_IO_EXTERN int io_sock_mcast_leave_source_group(io_handle_t handle,
		unsigned int index, const io_addr_t *group,
		const io_addr_t *source);